--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "array-last": "~1.0.2",
     "range-function": "~0.1.1",
     "semver": "~4.3.3",
     "semver-truncate": "~1.0.0"
