--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "array-last": "~1.0.2",
+    "babel-runtime": "~5.2.5",
     "range-function": "~0.1.1",
     "semver": "~4.3.3",
     "sort-on": "~1.1.0",
@@ -16,10 +17,12 @@
   "devDependencies": {
     "babel": "~5.2.0",
     "babel-tape-runner": "~1.1.0",
+    "babelify": "~6.0.2",
+    "coverify": "~1.1.0",
     "tape": "~4.0.0"
   },
   "scripts": {
-    "test": "babel-tape-runner test/*.js",
+    "test": "browserify -t babelify -t coverify test/*.js --bare | node | coverify",
     "build": "babel ./src -d ./lib --optional runtime"
   },
   "repository": {
