--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel": "~5.2.0",
     "babel-tape-runner": "~1.1.0",
     "babelify": "~6.0.2",
+    "browserify": "^10.1.3",
     "coverify": "~1.1.0",
     "tape": "~4.0.0"
   },
