--- a/package.json
+++ b/package.json
@@ -2,30 +2,22 @@
   "name": "major-versions",
   "version": "1.0.2",
   "description": "Get all the major versions within a semver range",
-  "main": "./src",
-  "directories": {
-    "test": "test"
-  },
+  "main": "index.js",
   "dependencies": {
     "array-last": "~1.0.2",
-    "babel-runtime": "~5.2.5",
-    "range-function": "~0.1.1",
+    "array-uniq": "~1.0.2",
+    "pff": "~1.0.0",
     "semver": "~4.3.3",
-    "sort-on": "~1.1.0",
-    "unique-concat": "~0.2.2"
+    "semver-bounded": "~2.0.0",
+    "semver-conflicts": "~1.0.0",
+    "semver-resolves": "~1.0.0"
   },
   "devDependencies": {
-    "babel": "~5.2.0",
-    "babel-tape-runner": "~1.1.0",
-    "babelify": "~6.0.2",
-    "browserify": "^10.1.3",
-    "coverify": "~1.1.0",
-    "publicist": "^4.0.4",
-    "publicist-es5": "^1.0.0",
+    "standard": "^4.0.1",
     "tape": "~4.0.0"
   },
   "scripts": {
-    "test": "browserify -t babelify -t coverify test/*.js --bare | node | coverify"
+    "test": "standard && tape test.js"
   },
   "repository": {
     "type": "git",
@@ -43,12 +35,8 @@
     "url": "https://github.com/bendrucker/major-versions/issues"
   },
   "homepage": "https://github.com/bendrucker/major-versions#readme",
-  "publicist": {
-    "builds": {
-      "es5": {
-        "src": "./src/*.js",
-        "dest": "./lib"
-      }
-    }
-  }
+  "files": [
+    "index.js",
+    "readme.md"
+  ]
 }
